--- a/index.css
+++ b/index.css
@@ -10,7 +10,7 @@
 /* Footer */
 .footer {
   background-color: pink;
-  padding: 50px 0px;
+  padding: 7px 0px;
   color: black;
   border-top: 2px solid black	
 }
@@ -25,7 +25,7 @@
 }
 .footer p {
     font-size: 15px;
-  padding-bottom: 10px;
+  padding-bottom: 1px;
   padding-right: 20px
 }
 .footer a {
@@ -89,9 +89,9 @@
 
 /*MENI*/
 .meni {
-  padding: 27px;
+  padding: 20px;
   border-bottom: 4px solid pink;
-  background-image: url('slikabg.jpg');
+  background-image: url('images/slikabg.jpg');
 }
 .meni-lijevo>a {
   font-size: 23px;
@@ -650,4 +650,6 @@ width: 100px;
   text-align: center;
   font-size: 35px;
 }
- 
+#cleaner {
+  clear: both;
+}
